[gd_scene load_steps=11 format=3 uid="uid://df1cjvnosxive"]

[ext_resource type="Script" path="res://scripts/main_menu.gd" id="1_jdx06"]
[ext_resource type="Script" path="res://scripts/music.gd" id="2_0ugj3"]
[ext_resource type="AudioStream" uid="uid://c056d56yubuja" path="res://assets/sound/main_ost.mp3" id="3_78qmm"]
[ext_resource type="Texture2D" uid="uid://b85hhbhfnbeca" path="res://assets/continue_btn.png" id="4_gpy61"]
[ext_resource type="Texture2D" uid="uid://b21sm62t3ui81" path="res://assets/menu_back.png" id="4_r5rqj"]
[ext_resource type="Texture2D" uid="uid://b5n3txs767fnr" path="res://assets/new_game_btn.png" id="5_dlwgo"]
[ext_resource type="Texture2D" uid="uid://b7o2iemg2b3hl" path="res://assets/quie_btn.png" id="6_q40rg"]
[ext_resource type="Texture2D" uid="uid://crbg0ce5ip03d" path="res://assets/settings_btn.png" id="7_j3svn"]
[ext_resource type="Texture2D" uid="uid://dnwkf5f5k3533" path="res://assets/audio_icon.png" id="9_tciln"]

[sub_resource type="LabelSettings" id="LabelSettings_b0wkl"]
font_size = 20
font_color = Color(0, 0, 0, 1)

[node name="World" type="Node2D"]
process_mode = 3
self_modulate = Color(1, 1, 1, 0.278431)
top_level = true
script = ExtResource("1_jdx06")

[node name="Audio" type="Node2D" parent="."]

[node name="MainOst" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource("3_78qmm")
autoplay = true

[node name="MenuBack" type="Sprite2D" parent="."]
position = Vector2(-5, -8)
scale = Vector2(1.96917, 1.8025)
texture = ExtResource("4_r5rqj")

[node name="Camera2D" type="Camera2D" parent="."]

[node name="ContinueBtn" type="Sprite2D" parent="."]
position = Vector2(145, -64)
texture = ExtResource("4_gpy61")

[node name="Button" type="Button" parent="ContinueBtn"]
modulate = Color(1, 1, 1, 0)
offset_left = -97.0
offset_top = -47.0
offset_right = 104.0
offset_bottom = 29.0
metadata/_edit_use_anchors_ = true

[node name="NewGameBtn" type="Sprite2D" parent="."]
position = Vector2(-5, -186)
texture = ExtResource("5_dlwgo")

[node name="Button2" type="Button" parent="NewGameBtn"]
modulate = Color(1, 1, 1, 0)
offset_left = -183.0
offset_top = -66.0
offset_right = 178.0
offset_bottom = 71.0
metadata/_edit_use_anchors_ = true

[node name="QuiteBtn" type="Sprite2D" parent="."]
position = Vector2(-6, 133)
texture = ExtResource("6_q40rg")

[node name="Button3" type="Button" parent="QuiteBtn"]
modulate = Color(1, 1, 1, 0)
offset_left = -185.0
offset_top = -77.0
offset_right = 176.0
offset_bottom = 60.0
metadata/_edit_use_anchors_ = true

[node name="SettingsBtn" type="Sprite2D" parent="."]
position = Vector2(225, -250)
texture = ExtResource("7_j3svn")

[node name="PanelContainer" type="PanelContainer" parent="SettingsBtn"]
self_modulate = Color(1, 1, 1, 0)
offset_left = -30.0
offset_top = -26.0
offset_right = 105.0
offset_bottom = 22.0
scale = Vector2(0.528384, 0.587196)
size_flags_horizontal = 3
script = ExtResource("2_0ugj3")

[node name="VBoxContainer" type="VBoxContainer" parent="SettingsBtn/PanelContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="SettingsBtn/PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Sound Master
"
label_settings = SubResource("LabelSettings_b0wkl")

[node name="HSlider" type="HSlider" parent="SettingsBtn/PanelContainer/VBoxContainer"]
layout_mode = 2
max_value = 1.0
step = 0.05

[node name="AudioIcon" type="Sprite2D" parent="SettingsBtn/PanelContainer"]
position = Vector2(-24.6033, 27.2482)
scale = Vector2(2.3244, 2.3244)
texture = ExtResource("9_tciln")

[connection signal="mouse_entered" from="ContinueBtn/Button" to="." method="_on_continue_m_entered"]
[connection signal="mouse_exited" from="ContinueBtn/Button" to="." method="_on_continue_m_exited"]
[connection signal="pressed" from="ContinueBtn/Button" to="." method="_on_button_continue_pressed"]
[connection signal="mouse_entered" from="NewGameBtn/Button2" to="." method="_on_newgame_m_entered"]
[connection signal="mouse_exited" from="NewGameBtn/Button2" to="." method="_on_newgame_m_exited"]
[connection signal="pressed" from="NewGameBtn/Button2" to="." method="_on_button_start_pressed"]
[connection signal="mouse_entered" from="QuiteBtn/Button3" to="." method="_on_quite_m_entered"]
[connection signal="mouse_exited" from="QuiteBtn/Button3" to="." method="_on_quite_m_exited"]
[connection signal="pressed" from="QuiteBtn/Button3" to="." method="_on_button_exit_pressed"]
